--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-stage-0": "^6.1.2",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
+    "http-server": "^0.8.5",
     "standard": "^5.3.1"
   },
   "devDependencies": {
