--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "start-server": "http-server dist",
     "test": "standard",
     "clean": "rm -rf dist",
-    "build": "npm run clean && mkdir dist && npm run build && npm run build-css && npm run build-js",
+    "build": "npm run clean && mkdir dist && npm run build-html && npm run build-css && npm run build-js",
     "build-html": "cp game/index.html dist/index.html",
-    "build-css": "cp game/game.css dist.game.css",
-    "bulid-js": "browserify game/game.js --outfile dist/game.js --transform babelify",
+    "build-css": "cp game/app.css dist/app.css",
+    "build-js": "browserify game/game.js --outfile dist/game.js --transform babelify",
     "watch": "npm run build && npm run watch-js & npm run start-server",
-    "watch-js": "watchify game/game.js --outfile dist/game.js --transform babelify --verbose" 
+    "watch-js": "watchify game/game.js --outfile dist/game.js --transform babelify --verbose"
   },
   "repository": {
     "type": "git",
